--- a/icasa.light.user.command/pom.xml
+++ b/icasa.light.user.command/pom.xml
@@ -9,6 +9,7 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>bundle</packaging>
 
     <!-- DESCRIPTION OBLIGATOIRE DE L'ARTIFACT-->
     <!-- Le groupeid et la version sont hérité du parent -->
