--- a/icasa.temperature.regulator/pom.xml
+++ b/icasa.temperature.regulator/pom.xml
@@ -31,11 +31,19 @@
 			<artifactId>icasa.light.api</artifactId>
 		</dependency>
 
+		
 		<!--iCasa dep -->
 		<dependency>
 			<groupId>fr.liglab.adele.icasa</groupId>
 			<artifactId>context.api</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>fr.liglab.adele.icasa</groupId>
+			<artifactId>technical.services.api</artifactId>
+			<version>1.2.7-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 	<!-- Ce qui va etre appelé dasn la phase de build du projet (en plus de 
